syntax = "proto3";
package helios.hyperion.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "helios/hyperion/v1/attestation.proto";
import "helios/hyperion/v1/genesis.proto";
import "helios/hyperion/v1/params.proto";
import "helios/hyperion/v1/types.proto";
import "helios/hyperion/v1/msgs.proto";
import "helios/hyperion/v1/pool.proto";
import "helios/hyperion/v1/batch.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "helios-core/helios-chain/x/hyperion/types";

// Query defines the gRPC querier service
service Query {
  // Deployments queries deployments
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hyperion/v1/params";
  }

  // attestation
  rpc Attestation(QueryAttestationRequest) returns (QueryAttestationResponse) {
    option (google.api.http).get = "/hyperion/v1/attestation/{nonce}/{claim_hash}";
  }
  // valset
  rpc CurrentValset(QueryCurrentValsetRequest)
      returns (QueryCurrentValsetResponse) {
    option (google.api.http).get = "/hyperion/v1/valset/current";
  }
  rpc ValsetRequest(QueryValsetRequestRequest)
      returns (QueryValsetRequestResponse) {
    option (google.api.http).get = "/hyperion/v1/valset";
  }
  rpc ValsetConfirm(QueryValsetConfirmRequest)
      returns (QueryValsetConfirmResponse) {
    option (google.api.http).get = "/hyperion/v1/valset/confirm";
  }
  rpc ValsetConfirmsByNonce(QueryValsetConfirmsByNonceRequest)
      returns (QueryValsetConfirmsByNonceResponse) {
    option (google.api.http).get = "/hyperion/v1/confirms/{nonce}";
  }
  rpc LastValsetRequests(QueryLastValsetRequestsRequest)
      returns (QueryLastValsetRequestsResponse) {
    option (google.api.http).get = "/hyperion/v1/valset/requests";
  }
  rpc LastPendingValsetRequestByAddr(QueryLastPendingValsetRequestByAddrRequest)
      returns (QueryLastPendingValsetRequestByAddrResponse) {
    option (google.api.http).get = "/hyperion/v1/valset/last";
  }

  // claim
  rpc LastEventByAddr(QueryLastEventByAddrRequest)
      returns (QueryLastEventByAddrResponse) {
    option (google.api.http).get = "/hyperion/v1/oracle/event/{address}";
  }

  // batch
  rpc GetPendingSendToChain(QueryPendingSendToChain)
      returns (QueryPendingSendToChainResponse) {
    option (google.api.http).get = "/hyperion/v1/pending_send_to_chain";
  }
  rpc GetAllPendingSendToChain(QueryAllPendingSendToChainRequest)
      returns (QueryAllPendingSendToChainResponse) {
    option (google.api.http).get = "/hyperion/v1/all_pending_send_to_chain";
  }
  rpc BatchFees(QueryBatchFeeRequest) returns (QueryBatchFeeResponse) {
    option (google.api.http).get = "/hyperion/v1/batchfees";
  }
  rpc OutgoingTxBatches(QueryOutgoingTxBatchesRequest)
      returns (QueryOutgoingTxBatchesResponse) {
    option (google.api.http).get = "/hyperion/v1/batch/outgoingtx";
  }
  rpc LastPendingBatchRequestByAddr(QueryLastPendingBatchRequestByAddrRequest)
      returns (QueryLastPendingBatchRequestByAddrResponse) {
    option (google.api.http).get = "/hyperion/v1/batch/last";
  }
  rpc BatchRequestByNonce(QueryBatchRequestByNonceRequest)
      returns (QueryBatchRequestByNonceResponse) {
    option (google.api.http).get = "/hyperion/v1/batch";
  }
  rpc BatchConfirms(QueryBatchConfirmsRequest)
      returns (QueryBatchConfirmsResponse) {
    option (google.api.http).get = "/hyperion/v1/batch/confirms";
  }

  rpc TokenAddressToDenom(QueryTokenAddressToDenomRequest)
      returns (QueryTokenAddressToDenomResponse) {
    option (google.api.http).get = "/hyperion/v1/tokens/token_address_to_denom";
  }
  rpc DenomToTokenAddress(QueryDenomToTokenAddressRequest)
      returns (QueryDenomToTokenAddressResponse) {
    option (google.api.http).get = "/hyperion/v1/tokens/denom_to_token_address";
  }

  rpc GetDelegateKeyByValidator(QueryDelegateKeysByValidatorAddress)
      returns (QueryDelegateKeysByValidatorAddressResponse) {
    option (google.api.http).get = "/hyperion/v1/query_delegate_keys_by_validator";
  }
  rpc GetDelegateKeyByEth(QueryDelegateKeysByEthAddress)
      returns (QueryDelegateKeysByEthAddressResponse) {
    option (google.api.http).get = "/hyperion/v1/query_delegate_keys_by_eth";
  }
  rpc GetDelegateKeyByOrchestrator(QueryDelegateKeysByOrchestratorAddress)
      returns (QueryDelegateKeysByOrchestratorAddressResponse) {
    option (google.api.http).get =
        "/hyperion/v1/query_delegate_keys_by_orchestrator";
  }

  // Retrieves the entire hyperion module's state
  rpc HyperionModuleState(QueryModuleStateRequest)
      returns (QueryModuleStateResponse) {
    option (google.api.http).get = "/hyperion/v1/module_state";
  }

  rpc MissingHyperionNonces(MissingNoncesRequest) returns (MissingNoncesResponse) {
    option (google.api.http).get = "/hyperion/v1/missing_nonces";
  }

  rpc GetHyperionIdFromChainId(QueryGetHyperionIdFromChainIdRequest)
      returns (QueryGetHyperionIdFromChainIdResponse) {
    option (google.api.http).get = "/hyperion/v1/query_hyperion_id_from_chain_id";
  }

  rpc QueryGetLastObservedEthereumBlockHeight(QueryGetLastObservedEthereumBlockHeightRequest)
      returns (QueryGetLastObservedEthereumBlockHeightResponse) {
    option (google.api.http).get = "/hyperion/v1/query_hyperion_last_observed_ethereum_block_height";
  }

  rpc QueryGetLastObservedEventNonce(QueryGetLastObservedEventNonceRequest)
      returns (QueryGetLastObservedEventNonceResponse) {
    option (google.api.http).get = "/hyperion/v1/query_hyperion_last_observed_event_nonce";
  }

  rpc QueryGetTransactionsByPageAndSize(QueryGetTransactionsByPageAndSizeRequest)
      returns (QueryGetTransactionsByPageAndSizeResponse) {
    option (google.api.http).get = "/hyperion/v1/transactions/{address}";
  }

  rpc QueryGetCounterpartyChainParamsByChainId(QueryGetCounterpartyChainParamsByChainIdRequest)
      returns (QueryGetCounterpartyChainParamsByChainIdResponse) {
    option (google.api.http).get = "/hyperion/v1/chains/{chain_id}/params";
  }

  rpc QueryGetRpcListByChainId(QueryGetRpcListByChainIdRequest)
      returns (QueryGetRpcListByChainIdResponse) {
    option (google.api.http).get = "/hyperion/v1/chains/{chain_id}/rpcs";
  }
}

message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryAttestationRequest {
  uint64 nonce = 1;
  bytes claim_hash = 2;
  uint64 hyperion_id = 3;
}

message QueryAttestationResponse { Attestation attestation = 1; }

message QueryCurrentValsetRequest {uint64 hyperion_id = 1; }
message QueryCurrentValsetResponse { Valset valset = 1; }

message QueryValsetRequestRequest {
  uint64 hyperion_id = 1;
  uint64 nonce = 2;
}
message QueryValsetRequestResponse { Valset valset = 1; }

message QueryValsetConfirmRequest {
  uint64 hyperion_id = 1;
  uint64 nonce = 2;
  string address = 3;
}
message QueryValsetConfirmResponse { MsgValsetConfirm confirm = 1; }

message QueryValsetConfirmsByNonceRequest {
  uint64 hyperion_id = 1;
  uint64 nonce = 2;
}
message QueryValsetConfirmsByNonceResponse {
  repeated MsgValsetConfirm confirms = 1;
}

message QueryLastValsetRequestsRequest {
  uint64 hyperion_id = 1;
}
message QueryLastValsetRequestsResponse { repeated Valset valsets = 1; }

message QueryLastPendingValsetRequestByAddrRequest {
  uint64 hyperion_id = 1;
  string address = 2;
}
message QueryLastPendingValsetRequestByAddrResponse {
  repeated Valset valsets = 1;
}

message QueryBatchFeeRequest {
  uint64 hyperion_id = 1;
}
message QueryBatchFeeResponse { repeated BatchFees batchFees = 1; }

message QueryLastPendingBatchRequestByAddrRequest {
  uint64 hyperion_id = 1;
  string address = 2;
}
message QueryLastPendingBatchRequestByAddrResponse {
  OutgoingTxBatch batch = 1;
}

message QueryOutgoingTxBatchesRequest {
  uint64 hyperion_id = 1;
}
message QueryOutgoingTxBatchesResponse { repeated OutgoingTxBatch batches = 1; }

message QueryBatchRequestByNonceRequest {
  uint64 hyperion_id = 1;
  uint64 nonce = 2;
  string contract_address = 3;
}
message QueryBatchRequestByNonceResponse { OutgoingTxBatch batch = 1; }

message QueryBatchConfirmsRequest {
  uint64 hyperion_id = 1;
  uint64 nonce = 2;
  string contract_address = 3;
}
message QueryBatchConfirmsResponse { repeated MsgConfirmBatch confirms = 1; }

message QueryLastEventByAddrRequest {
  uint64 hyperion_id = 1;
  string address = 2;
}
message QueryLastEventByAddrResponse { LastClaimEvent last_claim_event = 1; }

message QueryTokenAddressToDenomRequest { 
  uint64 hyperion_id = 1;
  string token_address = 2; 
}
message QueryTokenAddressToDenomResponse {
  string denom = 1;
  bool cosmos_originated = 2;
}

message QueryDenomToTokenAddressRequest { 
  uint64 hyperion_id = 1;
  string denom = 2; 
  
}
message QueryDenomToTokenAddressResponse {
  string token_address = 1;
  bool cosmos_originated = 2;
}

message QueryDelegateKeysByValidatorAddress {
  uint64 hyperion_id = 1;
  string validator_address = 2;
}
message QueryDelegateKeysByValidatorAddressResponse {
  string eth_address = 1;
  string orchestrator_address = 2;
}

message QueryDelegateKeysByEthAddress {
  uint64 hyperion_id = 1;
  string eth_address = 2;
}
message QueryDelegateKeysByEthAddressResponse {
  string validator_address = 1;
  string orchestrator_address = 2;
}

message QueryDelegateKeysByOrchestratorAddress {
  uint64 hyperion_id = 1;
  string orchestrator_address = 2;
}
message QueryDelegateKeysByOrchestratorAddressResponse {
  string validator_address = 1;
  string eth_address = 2;
}

message QueryPendingSendToChain {
  uint64 hyperion_id = 1;
  string sender_address = 2;
}

message QueryPendingSendToChainResponse {
  repeated OutgoingTransferTx transfers_in_batches = 1;
  repeated OutgoingTransferTx unbatched_transfers = 2;
}

message QueryAllPendingSendToChainRequest {
  uint64 hyperion_id = 1;
}
message QueryAllPendingSendToChainResponse {
  repeated OutgoingTransferTx transfers_in_batches = 1;
  repeated OutgoingTransferTx unbatched_transfers = 2;
}

// QueryModuleStateRequest is the request type for the Query/HyperionModuleState
// RPC method.
message QueryModuleStateRequest {}

// QueryModuleStateResponse is the response type for the Query/HyperionModuleState
// RPC method.
message QueryModuleStateResponse { GenesisState state = 1; }

message MissingNoncesRequest {
  uint64 hyperion_id = 1;
}

message MissingNoncesResponse { repeated string operator_addresses = 1; }

message QueryGetHyperionIdFromChainIdRequest {
  uint64 chain_id = 1;
}

message QueryGetHyperionIdFromChainIdResponse {
  uint64 hyperion_id = 1;
}

message QueryGetLastObservedEthereumBlockHeightRequest {
  uint64 hyperion_id = 1;
}

message QueryGetLastObservedEthereumBlockHeightResponse {
  LastObservedEthereumBlockHeight last_observed_height = 1;
}

message QueryGetLastObservedEventNonceRequest {
  uint64 hyperion_id = 1;
}

message QueryGetLastObservedEventNonceResponse {
  uint64 last_observed_event_nonce = 1;
}

message QueryGetTransactionsByPageAndSizeRequest {
  string address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
  bool format_erc20 = 3;
}

message QueryGetTransactionsByPageAndSizeResponse {
  repeated TransferTx txs = 1;
}

message QueryGetCounterpartyChainParamsByChainIdRequest {
  uint64 chain_id = 1;
}

message QueryGetCounterpartyChainParamsByChainIdResponse {
  CounterpartyChainParams counterparty_chain_params = 1;
}

message QueryGetRpcListByChainIdRequest {
  uint64 chain_id = 1;
}

message QueryGetRpcListByChainIdResponse {
  repeated Rpc rpcs = 1;
}